# quotes-bot

./: Cargo.toml  Dockerfile
migrations/: 20240408123803_inital_database_setup.sql
src/: handlers.rs  main.rs  utils.rs
