[package]
name = "quotes-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
